--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="#contact" class="smoothscroll btn btn--stroke">
                         Contact Me
                     </a>
-                    <a href="/images/Kerim Shamyradov RESUME 01.pdf" class=" btn btn--stroke" download="">
+                    <a href="/images/Shamyradov Kerim Resume.pdf" class=" btn btn--stroke" download="">
                         Download CV
                     </a>
                 </div>
