--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <h1>
                     I am Kerim Shamyradov <br>
-                    Full Stack Web Developer<br>
+                    <br>Full Stack Web Developer<br>
                
                 </h1>
 
